fix(overflow): hide overflow on html x

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
 @layer base {
     html {
         font-family: 'Poppins', sans-serif;
+        overflow-x: hidden;
     }
 
     h1 {
